crates/stc_ts_file_analyzer/tests/errors/conformance/types/union/withIndexSignature/1.ts
//@strict: true

type RO = { foo: number } | { readonly [s: string]: string };
declare var ro: RO;
ro.foo = "not allowed";
